# cmake_vscode_experiments

./: .gitignore  README.md
32bit/: CMakeLists.txt  main.c
basic/: .gitignore  CMakeLists.txt
basic2/: CMakeLists.txt  main.c
flags/: CMakeLists.txt  flags.c  flags.h  main.c
subfolders/: CMakeLists.txt
subfolders/drivers/: CMakeLists.txt  driver_c.c
subfolders/drivers/inc/: driver_inc.h
subfolders/drivers/util/: util.cpp  util.h
subfolders/main/: CMakeLists.txt  main.cpp  main.h
tests/: CMakeLists.txt  README.md
tests/tests/: CMakeLists.txt  example_test.cpp
